--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -1,24 +1,67 @@
 
 html{
-  box-sizing: border-box;   
+  box-sizing: border-box; 
+  font-size: 62.5%;  
 }
 *, *:before, *:after{
     box-sizing: inherit;
 }
+body{
+font-family: 'Raleway', sans-serif;
+font-size: 1.6rem;
+line-height: 2;
+}
 /* globales */
+h1,h2,h3{
+    font-family: 'Playfair Display', serif;
+    margin: 0 0 5rem 0;
+}
+h1{
+font-size: 5rem;
+}
+h2{
+    font-size: 4rem;
+
+}
+h3{
+    font-size: 3rem;
+
+}
 a{
     text-decoration: none;
     color: black;
 }
 .contenedor{
-    max-width: 1250px;
+    max-width: 120rem;
     margin: 0 auto ;
 }
+img{
+    max-width: 100%;
+    display: block;
+   
+}
+ /* utilidades */
+ .text-center{
+    text-align: center;
+ }
 
+ .btn{
+    background-color: #8cbc00;   
+    display: block;
+    color: white;
+    text-transform: uppercase;
+    font-weight: 900;
+       padding: 1rem;
+       border-radius: 1.8rem;
+       transition:background-color .3s  ease-out;
+   }
+   .btn:hover{
+   background-color: #769c02;
+   }
+   
 /* header y navegacion  */
 .nombre-sitio{
-    margin-top: 50px;
-    margin-bottom: 50px;
+    margin-top: 5rem;
     text-align: center;
 }
 
@@ -29,16 +72,150 @@ a{
     border-top: 1px solid #e1e1e1;
 }
 .nav-principal{
-    padding: 30px 0;
+    padding: 2rem 0;
     display: flex;
     justify-content: space-between;
+}
+.nav-principal a{
+    font-size: 20px;
 }
 
 .hero{
     background-image: url(../Img/principal.jpg);
     background-repeat: no-repeat;
     background-size: cover;
-    height: 550px;
-  
+    background-position: center center;
+    height: 55rem;
 }
 
+/* categorias */
+.categorias{
+    margin-top: 5rem;
+}
+.categorias h2{
+    text-align: center;
+}
+.categoria a{
+    display: block;
+    text-align: center;
+    padding: 2rem;
+    font-size: 2rem;
+}
+.categoria a:hover{
+    background-color: #037bc0;
+    color: white;
+    border-radius: 0 0 1rem;
+}
+
+.lista-categorias{
+    display: grid;
+    grid-template-columns: repeat(3,1fr);
+    gap: 2rem;
+}
+/* bloque nosotros */
+.sobre-nosotros{
+    background-image: linear-gradient(to right, transparent 50%, #037bc0 50%, #037bc0 100%), url(../Img/nosotros.jpg);
+    background-position: left center;
+    padding: 10rem 0;
+    background-repeat: no-repeat;
+    background-size: 100%,120rem;
+   margin-top: 1rem;
+}
+.sobre-nosotros-grid{
+    display:flex;
+    justify-content: flex-end;
+
+}
+.texto-nosotros{
+   flex-basis: 50%;
+   padding-left: 10rem;
+   color: white;
+}
+/* listado de productos */
+
+.listado-productos{
+    display: grid;
+    grid-template-columns: repeat(6,1fr);
+    gap: 2rem;
+}
+.producto:nth-child(1){
+    grid-column: 1/7;
+    display: grid;
+    grid-template-columns: 3fr 1fr;
+}
+.producto:nth-child(1) img{
+    height: 43rem;
+    width: 100%;
+    object-fit: cover cover;
+}
+.producto:nth-child(2){
+    grid-column: 1/4;
+}
+
+.producto:nth-child(2) img{
+    height: 30rem;
+    width: 100%;
+    object-fit: cover;
+}
+.producto:nth-child(3){
+    grid-column: 4/7;
+}
+.producto:nth-child(3) img{
+    height: 30rem;
+    width: 100%;
+    object-fit: cover;
+}
+.producto:nth-child(4){
+    grid-column: 1/3;
+}
+.producto:nth-child(5){
+    grid-column: 3/5;
+}
+.producto:nth-child(6){
+    grid-column: 5/7;
+}
+
+.contenido-principal{
+    padding: 5rem;
+}
+.producto{
+    background-color: #037bc0;
+}
+.texto-producto{
+    text-align: center;
+    color: white;
+    padding: 2rem;
+}
+.texto-producto h3{
+ margin: 0;
+}
+.texto-producto p{
+    margin: 0;
+}
+.texto-producto .precio{
+    font-size: 2.8rem;
+    font-weight: 900;
+}
+
+/* footer */
+.site-footer{
+    border-top: 1px solid #e1e1e1;
+    margin-top: 5rem;
+    padding-top: 5rem;
+}
+.site-footer h3{
+    margin-bottom: .5rem;
+}
+.grid-footer{
+    display: grid;
+    grid-template-columns: repeat(3,1fr);
+    gap: 2rem;
+}
+.footer-menu a{
+    display:block; 
+}
+
+.copyright{
+    margin-top: 5rem;
+    text-align: center;
+}
