--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -44,6 +44,9 @@ img{
  .text-center{
     text-align: center;
  }
+ .max-width-30{
+    max-width: 30rem;
+ }
 
  .btn{
     background-color: #8cbc00;   
@@ -54,11 +57,18 @@ img{
        padding: 1rem;
        border-radius: 1.8rem;
        transition:background-color .3s  ease-out;
+       text-align: center;
+       border: none;
    }
    .btn:hover{
    background-color: #769c02;
+   cursor: pointer;
    }
    
+   /* seccion activada */
+   .active{
+    color: #037bc0;
+   }
 /* header y navegacion  */
 .nombre-sitio{
     margin-top: 5rem;
@@ -218,4 +228,103 @@ img{
 .copyright{
     margin-top: 5rem;
     text-align: center;
+}
+
+/* Nosotros */
+.contenido-nosotros{
+    display: grid;
+    grid-template-columns: 1fr 2fr;
+    grid-template-columns: repeat(auto-fit, minmax(25rem, 1fr));
+    column-gap: 4rem;
+
+}
+.informacion-nosotros{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+/* blog */
+.contenedor-blog{
+    display: grid;
+    grid-template-columns: 2fr 1fr;
+}
+.entrada{
+    border-bottom: 2px solid #e1e1e1;
+    padding-bottom: 4rem;
+    margin-bottom: 2rem;
+}
+.entrada:last-of-type{
+    border: none;
+}
+.entrada-meta{
+    display: flex;
+    justify-content: space-between;
+}
+
+.entrada-meta p{
+    font-weight: 700
+}
+
+.entrada-meta span{
+    color: #037bc0;
+}
+
+/* Entrada Blog */
+.contenido-entrada-blog{
+    width: 60rem;
+    margin: 0 auto;
+}
+
+/* Galeria */
+.galeria{
+    list-style: none;
+    padding: 0;
+    margin: 0;
+    display: grid;
+    grid-template-columns: repeat(3,1fr);
+    gap: 2rem;
+}
+.galeria img{
+    height: 40rem;
+    width: 40rem;
+    object-fit: cover;
+}
+
+/* Formulario */
+.formulario{
+    max-width: 60rem;
+    margin: 0 auto;
+}
+.formulario fieldset{
+    border: 1ps solid black;
+    margin-bottom: 2rem;
+
+}
+.formulario legend{
+    background-color: #005485;
+  width: 100%;
+  text-align: center;
+  color: white;
+  font-weight: 900;
+  text-transform: uppercase;
+  padding: 1rem;
+  margin-bottom: 4rem;
+}
+.campo{
+display: flex;
+margin-bottom: 2rem;
+
+}
+.campo label{
+    flex-basis:10rem;
+}
+.campo input:not([type="radio"]),
+.campo textarea,
+.campo select
+{
+    flex: 1;
+    border: 1px solid #e1e1e1;
+    padding: 1rem;
+
 }
