--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -14,19 +14,35 @@ line-height: 2;
 /* globales */
 h1,h2,h3{
     font-family: 'Playfair Display', serif;
-    margin: 0 0 5rem 0;
+    margin: 0 0 2rem 0;
 }
 h1{
-font-size: 5rem;
+font-size: 3rem;
+}
+@media (min-width: 768px){ 
+    h1{
+        font-size: 5rem;
+    }
 }
 h2{
-    font-size: 4rem;
-
+    font-size: 3.2rem;
+}
+@media (min-width: 768px){ 
+    h2{
+        font-size:4rem;
+    }
 }
 h3{
-    font-size: 3rem;
+    font-size: 2.4rem;
 
 }
+
+@media (min-width: 768px){ 
+    h3{
+        font-size: 3rem;
+    }
+}
+
 a{
     text-decoration: none;
     color: black;
@@ -44,9 +60,13 @@ img{
  .text-center{
     text-align: center;
  }
- .max-width-30{
-    max-width: 30rem;
+
+ @media (min-width: 768px){ 
+    .max-width-30{
+        max-width: 30rem;
+     }    
  }
+
 
  .btn{
     background-color: #8cbc00;   
@@ -59,12 +79,19 @@ img{
        transition:background-color .3s  ease-out;
        text-align: center;
        border: none;
+       width: 100%;
    }
    .btn:hover{
    background-color: #769c02;
    cursor: pointer;
    }
    
+   @media (min-width: 768px){ 
+        .btn{
+            width: auto;
+        }
+    
+   }
    /* seccion activada */
    .active{
     color: #037bc0;
@@ -91,7 +118,15 @@ img{
 .nav-principal{
     padding: 2rem 0;
     display: flex;
-    justify-content: space-between;
+    flex-direction: column;
+    align-items: center;
+}
+
+@media (min-width: 768px){ 
+    .nav-principal{
+        justify-content: space-between;
+        flex-direction: row;
+    }
 }
 .nav-principal a{
     font-size: 20px;
@@ -106,17 +141,36 @@ img{
 
 }
 
+
+
 .hero{
     background-image: url(../Img/principal.jpg);
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center center;
-    height: 55rem;
+    height: 25rem;
 }
 
+@media (min-width: 768px){ 
+   .hero{
+    height: 55rem;
+   }
+}
 /* categorias */
 .categorias{
-    margin-top: 5rem;
+    padding: 5rem 0;
+}
+.categoria{
+    margin-bottom: 2rem;
+}
+@media (min-width: 768px){ 
+    .categoria{
+        margin-bottom: 0;
+    }
+}
+
+.categoria img{
+    width: 100%;
 }
 .categorias h2{
     text-align: center;
@@ -133,79 +187,119 @@ img{
     border-radius: 0 0 1rem;
 }
 
-.lista-categorias{
-    display: grid;
-    grid-template-columns: repeat(3,1fr);
-    gap: 2rem;
+
+@media (min-width:768px ){ 
+    .lista-categorias{
+        display: grid;
+        grid-template-columns: repeat(3,1fr);
+        gap: 2rem;
+    }
 }
+
 /* bloque nosotros */
 .sobre-nosotros{
-    background-image: linear-gradient(to right, transparent 50%, #037bc0 50%, #037bc0 100%), url(../Img/nosotros.jpg);
-    background-position: left center;
-    padding: 10rem 0;
+    background-image: linear-gradient(to bottom, transparent 50%, #037bc0 50%, #037bc0 100%), url(../Img/nosotros.jpg);
+    background-position: center, top left;
     background-repeat: no-repeat;
-    background-size: 100%,120rem;
-   margin-top: 1rem;
+    background-size: 100%,83rem;
+}
+
+@media (min-width: 768px){ 
+    .sobre-nosotros{
+        background-image: linear-gradient(to right, transparent 50%, #037bc0 50%, #037bc0 100%), url(../Img/nosotros.jpg);
+        background-position: left center;
+        padding: 10rem 0;
+        background-size: 100%,160rem;
+    }
 }
 .sobre-nosotros-grid{
-    display:flex;
-    justify-content: flex-end;
+    display: grid;
+    grid-template-rows: repeat(2,1fr);
+}
 
+@media (min-width: 768px){ 
+    .sobre-nosotros-grid{
+        grid-template-columns: repeat(2,1fr);
+        grid-template-rows: unset;
+        column-gap:10rem;
+    }
 }
 .texto-nosotros{
-   flex-basis: 50%;
-   padding-left: 10rem;
-   color: white;
-}
-/* listado de productos */
-
-.listado-productos{
-    display: grid;
-    grid-template-columns: repeat(6,1fr);
-    gap: 2rem;
-}
-.producto:nth-child(1){
-    grid-column: 1/7;
-    display: grid;
-    grid-template-columns: 3fr 1fr;
-}
-.producto:nth-child(1) img{
-    height: 43rem;
-    width: 100%;
-    object-fit: cover cover;
-}
-.producto:nth-child(2){
-    grid-column: 1/4;
-}
-
-.producto:nth-child(2) img{
-    height: 30rem;
-    width: 100%;
-    object-fit: cover;
-}
-.producto:nth-child(3){
-    grid-column: 4/7;
-}
-.producto:nth-child(3) img{
-    height: 30rem;
-    width: 100%;
-    object-fit: cover;
-}
-.producto:nth-child(4){
-    grid-column: 1/3;
-}
-.producto:nth-child(5){
-    grid-column: 3/5;
-}
-.producto:nth-child(6){
-    grid-column: 5/7;
-}
-
-.contenido-principal{
+    grid-row: 2/3;
+    color: white;
     padding: 5rem;
 }
+
+@media (min-width: 768px){ 
+    .texto-nosotros{
+        grid-column: 2/3;
+       }
+}
+
+/* listado de productos */
+.contenido-principal {
+    padding-top: 5rem;
+}
+
+
+
+@media (min-width: 768px){ 
+    .listado-productos{
+        display: grid;
+        grid-template-columns: repeat(6,1fr);
+        gap: 2rem;
+    }
+    .producto:nth-child(1){
+        grid-column: 1/7;
+        display: grid;
+        grid-template-columns: 3fr 1fr;
+    }
+    .producto:nth-child(1) img{
+        height: 43rem;
+        width: 100%;
+        object-fit: cover cover;
+    }
+    .producto:nth-child(2){
+        grid-column: 1/4;
+    }
+    
+    .producto:nth-child(2) img{
+        height: 30rem;
+        width: 100%;
+        object-fit: cover;
+    }
+    .producto:nth-child(3){
+        grid-column: 4/7;
+    }
+    .producto:nth-child(3) img{
+        height: 30rem;
+        width: 100%;
+        object-fit: cover;
+    }
+    .producto:nth-child(4){
+        grid-column: 1/3;
+    }
+    .producto:nth-child(5){
+        grid-column: 3/5;
+    }
+    .producto:nth-child(6){
+        grid-column: 5/7;
+    }
+}
+
 .producto{
     background-color: #037bc0;
+    margin-bottom: 2rem;
+}
+
+@media (min-width: 768px){ 
+    .producto{
+        margin-bottom: 0;
+    }
+}
+
+.producto:last-of-type{
+    margin-bottom: 0 ;
 }
 .texto-producto{
     text-align: center;
@@ -231,14 +325,37 @@ img{
 }
 .site-footer h3{
     margin-bottom: .5rem;
+    text-align: center;
 }
-.grid-footer{
-    display: grid;
-    grid-template-columns: repeat(3,1fr);
-    gap: 2rem;
+@media (min-width: 768px){ 
+    .grid-footer{
+        display: grid;
+        grid-template-columns: repeat(3,1fr);
+        gap: 2rem;
+    }
+    .site-footer h3{
+        text-align: left;
+    }
 }
+
+.grid-footer>div{
+    margin-bottom: 2rem;
+}
+
+@media (min-width: 768px){ 
+    .grid-footer>div{
+        margin: 0;
+    }
+}
+
 .footer-menu a{
     display:block; 
+    text-align: center;
+}
+@media (min-width: 768px){ 
+    .footer-menu a{ 
+        text-align: left;
+    }
 }
 
 .copyright{
@@ -258,25 +375,45 @@ img{
     display: flex;
     flex-direction: column;
     justify-content: center;
+    padding: 5rem;
+}
+@media (min-width: 768px){ 
+    .informacion-nosotros{
+        padding: 0;
+    }
 }
 
 /* blog */
-.contenedor-blog{
-    display: grid;
-    grid-template-columns: 2fr 1fr;
+@media (min-width: 768px){ 
+    .contenedor-blog{
+        display: grid;
+        grid-template-columns: 2fr 1fr;
+    }
 }
+
 .entrada{
     border-bottom: 2px solid #e1e1e1;
-    padding-bottom: 4rem;
     margin-bottom: 2rem;
+    padding: 2rem 2rem 4rem 2rem;
+}
+.entrada h2{
+    text-align: center;
+}
+@media (min-width: 768px){ 
+    .entrada h2{
+        text-align: left;
+    }
 }
 .entrada:last-of-type{
     border: none;
 }
-.entrada-meta{
-    display: flex;
-    justify-content: space-between;
+@media (min-width: 768px){ 
+    .entrada-meta{
+        display: flex;
+        justify-content: space-between;
+    }
 }
+
 
 .entrada-meta p{
     font-weight: 700
@@ -291,6 +428,9 @@ img{
     width: 60rem;
     margin: 0 auto;
 }
+.contenido-blog{
+    padding: 2rem;
+}
 
 /* Galeria */
 .galeria{
@@ -298,8 +438,14 @@ img{
     padding: 0;
     margin: 0;
     display: grid;
-    grid-template-columns: repeat(3,1fr);
+    grid-template-columns: 1fr;
     gap: 2rem;
+}
+
+@media (min-width: 768px){ 
+    .galeria{
+        grid-template-columns: repeat(3,1fr);
+    }
 }
 .galeria img{
     height: 40rem;
